Add public document share links
